--- a/templates/password_info.html
+++ b/templates/password_info.html
@@ -1,24 +1,22 @@
 {% include "header.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-    <!-- Page Header Start -->
-    <div class="container-fluid bg-secondary mb-5">
-        <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 300px">
-            <h1 class="font-weight-semi-bold text-uppercase mb-3">Newsletter</h1>
-            <div class="d-inline-flex">
-                <p class="m-0"><a href="">Home</a></p>
-                <p class="m-0 px-2">-</p>
-                <p class="m-0">Contact</p>
-            </div>
-        </div>
+<!-- Header Start -->
+<div class="container-fluid bg-secondary">
+    <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 100px">
+        <h1 class="font-weight-semi-bold text-uppercase mb-3" style="margin-top:13px;">Restore your password</h1>
     </div>
-    <!-- Page Header End -->
+</div>
+<!-- Header End -->
+
+<!-- Message To The User -->
 {% if message != None %}
-<p class="text-center">{{message}}</p>
+<p class="text-center" style="margin-top:40px; color:#c17a74;">{{message}}</p>
 {% endif %}
 
-    <div class="col-lg-3 col-md-5 mx-auto text-center" style="margin-top:40px;">
-  {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
-    </div>
+<!-- Password Restore Form -->
+<div class="col-lg-3 col-md-5 mx-auto text-center" style="margin:40px 0 40px 0;">
+    {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+</div>
 
 {% include "footer.html" %}
