--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -1,30 +1,19 @@
-
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% include "header.html" %}
 
-
-    <!-- Page Header Start -->
-        <div class="container-fluid bg-secondary">
-        <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 100px">
-             <h1 class="font-weight-semi-bold text-uppercase mb-3" style="margin-top:13px;">Edit profile</h1>
-        </div>
-        </div>
-
-
-    <!-- Page Header End -->
-
-
-    <!-- Contact Start -->
-
-        <!--<div class="row px-xl-5">-->
-     <div class="col-lg-3 col-md-5 mx-auto text-center" style="margin-top:40px;">
-
-
-            {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
-
-        </div>
+<!-- Header Start -->
+<div class="container-fluid bg-secondary">
+    <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 100px">
+        <h1 class="font-weight-semi-bold text-uppercase mb-3" style="margin-top:13px;">Edit profile</h1>
     </div>
-    <!-- Contact End -->
+</div>
+<!-- Header End -->
+
+<!-- Edit Profile Form Start -->
+<div class="col-lg-3 col-md-5 mx-auto text-center" style="margin:40px 0 40px 0;">
+    {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+</div>
+<!-- Edit Profile Form End -->
 
 {% include "footer.html" %}
