--- a/templates/header.html
+++ b/templates/header.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title>EShopper - Bootstrap Shop Template</title>
+    <title>MStore - M.Miśkiewicz Project</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="/static/img/favicon.ico" rel="icon">
+<link rel="shortcut icon" href="{{ url_for('static', filename='/img/favicon.ico') }}">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -26,144 +27,116 @@
 </head>
 
 <body>
-    <!-- Topbar Start -->
-    <div class="container-fluid">
-        <div class="row bg-secondary py-2 px-xl-5">
-            <div class="col-lg-6 d-none d-lg-block">
-                <div class="d-inline-flex align-items-center">
-                    <a class="text-dark" href="">FAQs</a>
-                    <span class="text-muted px-2">|</span>
-                    <a class="text-dark" href="">Help</a>
-                    <span class="text-muted px-2">|</span>
-                    <a class="text-dark" href="">Support</a>
-                </div>
-            </div>
-            <div class="col-lg-6 text-center text-lg-right">
-                <div class="d-inline-flex align-items-center">
-                    <a class="text-dark px-2" href="">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-dark px-2" href="">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a class="text-dark px-2" href="">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a class="text-dark px-2" href="">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-dark pl-2" href="">
-                        <i class="fab fa-youtube"></i>
-                    </a>
-                </div>
-            </div>
+<div class="container-fluid">
+    <div class="row align-items-center py-3 px-xl-5">
+        <!-- Page Logo Start -->
+        <div class="col-lg-6 col-6 text-left" style="display: inline-block;">
+            <a href="{{ url_for('show_main_page') }}" class="text-decoration-none">
+                <h1 class="m-0 display-5 font-weight-semi-bold"><span
+                        class="text-primary font-weight-bold border px-3 mr-1">M</span>Store</h1>
+            </a>
         </div>
-        <div class="row align-items-center py-3 px-xl-5">
-            <div class="col-lg-3 d-none d-lg-block">
-                <a href="{{ url_for('show_main_page') }}" class="text-decoration-none">
-                    <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
-                </a>
-            </div>
-            <div class="col-lg-6 col-6 text-left">
-                  <form method="get" action="{{ url_for('search') }}">
-                    <div class="input-group">
-                        <input name="q" type="text" class="form-control" placeholder="Search for products">
-                        <div class="input-group-append">
-                            <span class="input-group-text bg-transparent text-primary">
-                                <i class="fa fa-search"></i>
+        <!-- Page Logo End -->
+
+        <!-- Cart Icon Start -->
+        <div class="col-lg-6 col-6 text-right" style="display: inline-block;">
+            <a href="{{ url_for('cart') }}" class="btn border">
+                <i class="fas fa-shopping-cart text-primary"></i>
+                {% if "cart" in session: %}
+                {% set quantity = namespace(value=0) %}
+                {% for element in session["cart"]: %}
+                {% set quantity.value = quantity.value + element["quantity"] %}
+                {% endfor %}
+                <span class="badge">{{ quantity.value }}</span>
+                {% else: %}
+                <span class="badge">0</span>
+                {% endif %}
+            </a>
+        </div>
+              <!-- Cart Icon End -->
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row border-top px-xl-5">
+        <!-- Categories Bar Start -->
+        <div class="col-lg-3 d-none d-lg-block">
+            <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100"
+               data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
+                <h6 class="m-0">Categories</h6>
+                <i class="fa fa-angle-down text-dark"></i>
+            </a>
+
+            <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light"
+                 id="navbar-vertical" style="width: calc(100% - 30px); position:absolute; z-index: 2; ">
+                <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
+                    <a href="{{ url_for('search', q='Shirts') }}" class="nav-item nav-link">Shirts</a>
+                    <a href="{{ url_for('search', q='Jeans') }}" class="nav-item nav-link">Jeans</a>
+                    <a href="{{ url_for('search', q='Blazers') }}" class="nav-item nav-link">Blazers</a>
+                    <a href="{{ url_for('search', q='T-shirts') }}" class="nav-item nav-link">T-shirts</a>
+                    <a href="{{ url_for('search', q='Dresses') }}" class="nav-item nav-link">Dresses</a>
+                    <a href="{{ url_for('search', q='Cardigans') }}" class="nav-item nav-link">Cardigans</a>
+                    <a href="{{ url_for('search', q='Jackets') }}" class="nav-item nav-link">Jackets</a>
+                    <a href="{{ url_for('search', q='Coats') }}" class="nav-item nav-link">Coats</a>
+                    <a href="{{ url_for('search', q='Jumpers') }}" class="nav-item nav-link">Jumpers</a>
+                    <a href="{{ url_for('search', q='Turtlenecks') }}" class="nav-item nav-link">Turtlenecks</a>
+                </div>
+            </nav>
+        </div>
+                <!-- Categories Bar End -->
+
+        <div class="col-lg-9">
+            <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
+                <!-- Search Bar Start -->
+                <div class="col-lg-8 col-8 text-left d-none d-lg-block">
+                    <form method="get" action="{{ url_for('search') }}">
+                        <div class="input-group">
+                            <input name="q" type="text" class="form-control" placeholder="Search for products">
+                            <div class="input-group-append">
+                            <span class="input-group-text bg-transparent text-primary ">
+                                <button style="padding: 0; border: none; background: none; color:#c17a74;"><i
+                                        class="fa fa-search"></i></button>
                             </span>
+                            </div>
                         </div>
+                    </form>
+                </div>
+
+                <div class="col-lg-8 col-8 text-left d-block d-lg-none">
+                    <form method="get" action="{{ url_for('search') }}">
+                        <div class="input-group">
+                            <input name="q" type="text" class="form-control" placeholder="Search for products">
+                            <div class="input-group-append">
+                            <span class="input-group-text bg-transparent text-primary">
+                                <a href="{{ url_for('search') }}"><i class="fa fa-search"></i></a>
+                            </span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!-- Search Bar End -->
+
+                <!-- Right Nav Start -->
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                    {% if current_user.is_authenticated: %}
+                    <div class="navbar-nav ml-auto py-0">
+                        <a href="{{ url_for('my_orders') }}" class="nav-item nav-link">My Orders</a>
+                        <a href="{{ url_for('edit_profile') }}" class="nav-item nav-link">Edit Profile</a>
+                        <a href="{{ url_for('logout') }}" class="nav-item nav-link">Logout</a>
                     </div>
-                </form>
-            </div>
-            <div class="col-lg-3 col-6 text-right">
-                <a href="" class="btn border">
-                    <i class="fas fa-heart text-primary"></i>
-                    <span class="badge">0</span>
-                </a>
-                <a href="{{ url_for('cart') }}" class="btn border">
-                    <i class="fas fa-shopping-cart text-primary"></i>
-                    {% if "cart" in session: %}
-                        {% set quantity = namespace(value=0) %}
-                        {% for element in session["cart"]: %}
-                            {% set quantity.value = quantity.value + element["quantity"] %}
-                        {% endfor %}
-                         <span class="badge">{{ quantity.value }}</span>
                     {% else: %}
-                        <span class="badge">0</span>
+                    <div class="navbar-nav ml-auto py-0">
+                        <a href="{{ url_for('login') }}" class="nav-item nav-link">Login</a>
+                        <a href="{{ url_for('register') }}" class="nav-item nav-link">Register</a>
+                    </div>
                     {% endif %}
-                </a>
-            </div>
+                </div>
+                  <!-- Right Nav End -->
+            </nav>
         </div>
     </div>
-    <!-- Topbar End -->
-
-
-    <!-- Navbar Start -->
-    <div class="container-fluid">
-        <div class="row border-top px-xl-5">
-            <div class="col-lg-3 d-none d-lg-block">
-                <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
-                    <h6 class="m-0">Categories</h6>
-                    <i class="fa fa-angle-down text-dark"></i>
-                </a>
-                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); position:absolute; z-index: 2; ">
-                    <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">Dresses <i class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                <a href="" class="dropdown-item">Men's Dresses</a>
-                                <a href="" class="dropdown-item">Women's Dresses</a>
-                                <a href="" class="dropdown-item">Baby's Dresses</a>
-                            </div>
-                        </div>
-                        <a href="" class="nav-item nav-link">Shirts</a>
-                        <a href="" class="nav-item nav-link">Jeans</a>
-                        <a href="" class="nav-item nav-link">Swimwear</a>
-                        <a href="" class="nav-item nav-link">Sleepwear</a>
-                        <a href="" class="nav-item nav-link">Sportswear</a>
-                        <a href="" class="nav-item nav-link">Jumpsuits</a>
-                        <a href="" class="nav-item nav-link">Blazers</a>
-                        <a href="" class="nav-item nav-link">Jackets</a>
-                        <a href="" class="nav-item nav-link">Shoes</a>
-                    </div>
-                </nav>
-            </div>
-            <div class="col-lg-9">
-                <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
-                    <a href="{{ url_for('show_main_page') }}" class="text-decoration-none d-block d-lg-none">
-                        <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
-                    </a>
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <div class="navbar-nav mr-auto py-0">
-                            <a href="{{ url_for('show_main_page') }}" class="nav-item nav-link">Home</a>
-                            <a href="shop.html" class="nav-item nav-link">Shop</a>
-                            <a href="detail.html" class="nav-item nav-link">Shop Detail</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                                <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="cart.html" class="dropdown-item">Shopping Cart</a>
-                                    <a href="checkout.html" class="dropdown-item">Checkout</a>
-                                </div>
-                            </div>
-                            <a href="contact.html" class="nav-item nav-link active">Contact</a>
-                        </div>
-                        {% if current_user.is_authenticated: %}
-                         <div class="navbar-nav ml-auto py-0">
-                             <a href="{{ url_for('my_orders') }}" class="nav-item nav-link">My Orders</a>
-                            <a href="{{ url_for('logout') }}" class="nav-item nav-link">Logout</a>
-                         </div>
-                        {% else: %}
-                        <div class="navbar-nav ml-auto py-0">
-                            <a href="{{ url_for('login') }}" class="nav-item nav-link">Login</a>
-                            <a href="{{ url_for('register') }}" class="nav-item nav-link">Register</a>
-                        </div>
-                        {% endif %}
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </div>
+</div>
