--- a/templates/password_restore.html
+++ b/templates/password_restore.html
@@ -1,48 +1,39 @@
-
-
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% include "header.html" %}
 
-
-    <!-- Page Header Start -->
-     <div class="container-fluid bg-secondary">
-        <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 100px">
-             <h1 class="font-weight-semi-bold text-uppercase mb-3" style="margin-top:13px;">Restore password</h1>
-        </div>
-        </div>
-    <!-- Page Header End -->
-
-
-    <!-- Contact Start -->
-
-        <!--<div class="row px-xl-5">-->
-           <div class="col-lg-3 col-md-5 mx-auto text-center" style="margin-top:40px;">
-
-
-
- <form method="post">
-            <div class="form-group" >
-                <label class="control-label" for="email">Email</label>
-                                <input name="email" id="email" type="email" class="form-control border-0 py-2"  required="required" />
-                            </div>
-               <button class="btn btn-primary">Restore</button>
- </form>
+<!-- Header Start -->
+<div class="container-fluid bg-secondary">
+    <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 100px">
+        <h1 class="font-weight-semi-bold text-uppercase mb-3" style="margin-top:13px;">Restore password</h1>
     </div>
-    <!-- Contact End -->
+</div>
+<!-- Header End -->
 
-   <div class="col-lg-12 col-md-5 mx-auto text-center" style="margin-top:15px;">
-               {% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul style="list-style-type: none; margin: 0 0 15px 0; padding: 0; color:#c17a74;" class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
-
+<!-- Password Restore Form Start -->
+<div class="col-lg-3 col-md-5 mx-auto text-center" style="margin-top:40px;">
+    <form method="post">
+        <div class="form-group">
+            <label class="control-label" for="email">Email</label>
+            <input name="email" id="email" type="email" class="form-control border-0 py-2" required="required"/>
         </div>
+        <button class="btn btn-primary">Restore</button>
+    </form>
+</div>
+<!-- Password Restore Form End -->
 
+<!-- Messages Start -->
+<div class="col-lg-12 col-md-5 mx-auto text-center" style="margin-top:15px;">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul style="list-style-type: none; margin: 0 0 15px 0; padding: 0; color:#c17a74;" class=flashes>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+</div>
+<!-- Messages End -->
 
 {% include "footer.html" %}
