fix total amount in order.html

--- a/templates/order.html
+++ b/templates/order.html
@@ -69,7 +69,7 @@
                     <div class="d-flex justify-content-between mt-2">
                         <h5 class="font-weight-bold">Total</h5>
 
-                        <h5 class="font-weight-bold">PLN {{ order.total }}</h5>
+                        <h5 class="font-weight-bold">PLN {{ order.total | round(2) }}</h5>
                     </div>
 
                 </div>
