--- a/templates/order_mail.html
+++ b/templates/order_mail.html
@@ -161,7 +161,7 @@
                                                     <tr>
                                                         <td align="center" bgcolor="#d19c97"
                                                             style="border-radius: 6px;">
-                                                            <a href="http://127.0.0.1:5000/order/{{order_id}}"
+                                                            <a href="https://m-store.onrender.com/order/{{order_id}}"
                                                                target="_blank"
                                                                style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">View
                                                                 your order</a>
